[gd_scene load_steps=7 format=1]

[ext_resource path="res://PlayerPieces/Components/ComboSparkleManager.gd" type="Script" id=1]
[ext_resource path="res://PlayerPieces/Components/ComboSparklesBlue.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerPieces/Components/ComboSparklesRed.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerPieces/Components/ComboSparklesYellow.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/processed_sounds/neutral_buff.smp" type="Sample" id=5]

[sub_resource type="SampleLibrary" id=1]

samples/neutral_buff = {
"db": -3.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="ComboSparkleManager" type="Node2D"]

z/z = 5
z/relative = false
script/script = ExtResource( 1 )

[node name="ComboSparklesBlue" parent="." instance=ExtResource( 2 )]

[node name="ComboSparklesRed" parent="." instance=ExtResource( 3 )]

[node name="ComboSparklesYellow" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


